// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme-switcher [snapshot] > lg 1`] = `
<div
  class="vesper-theme-switcher vesper-theme-switcher-lg"
>
  <button
    aria-label="Switch color theme to system preference"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-system"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 5.5V15.5H20L21 16.5V20.5H3V16.5L4 15.5H5V5.5L7 3.5H17L19 5.5ZM4 16.9141V19.5H20V16.9141L19.5859 16.5H4.41406L4 16.9141ZM6 18.5H5V17.5H6V18.5ZM10 18.5H7V17.5H10V18.5ZM6 5.91406V15.5H18V5.91406L16.5859 4.5H7.41406L6 5.91406ZM17 6.5V13.5L16 14.5H8L7 13.5V6.5L8 5.5H16L17 6.5ZM8 6.91406V13.0859L8.41406 13.5H15.5859L16 13.0859V6.91406L15.5859 6.5H8.41406L8 6.91406Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-label="Switch color theme to light mode"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-light"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.5 6H14.667L15.9795 7.3125L18.7178 4.5752L19.4248 5.28223L16.6865 8.01953L18 9.33301V11.5H22V12.5H18V14.667L16.6865 15.9795L19.4248 18.7178L18.7178 19.4248L15.9795 16.6865L14.667 18H12.5V22H11.5V18H9.33301L8.01953 16.6865L5.28223 19.4248L4.5752 18.7178L7.3125 15.9795L6 14.667V12.5H2V11.5H6V9.33301L7.3125 8.01953L4.5752 5.28223L5.28223 4.5752L8.01953 7.3125L9.33301 6H11.5V2H12.5V6ZM9.77734 7L7 9.77734V14.2227L9.77734 17H14.2227L17 14.2227V9.77734L14.2227 7H9.77734Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <button
    aria-label="Switch color theme to dark mode"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-dark"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M19 8.88867V15.1113L15.1113 19H8.88867L5 15.1113V8.88867L8.88867 5H15.1113L19 8.88867ZM6 9.33301V14.667L9.33301 18H12V6H9.33301L6 9.33301Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <span
    class="vesper-theme-switcher-indicator"
  />
</div>
`;

exports[`theme-switcher [snapshot] > sm 1`] = `
<div
  class="vesper-theme-switcher vesper-theme-switcher-sm"
>
  <button
    aria-label="Switch color theme to system preference"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-system"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 5.5V15.5H20L21 16.5V20.5H3V16.5L4 15.5H5V5.5L7 3.5H17L19 5.5ZM4 16.9141V19.5H20V16.9141L19.5859 16.5H4.41406L4 16.9141ZM6 18.5H5V17.5H6V18.5ZM10 18.5H7V17.5H10V18.5ZM6 5.91406V15.5H18V5.91406L16.5859 4.5H7.41406L6 5.91406ZM17 6.5V13.5L16 14.5H8L7 13.5V6.5L8 5.5H16L17 6.5ZM8 6.91406V13.0859L8.41406 13.5H15.5859L16 13.0859V6.91406L15.5859 6.5H8.41406L8 6.91406Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-label="Switch color theme to light mode"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-light"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.5 6H14.667L15.9795 7.3125L18.7178 4.5752L19.4248 5.28223L16.6865 8.01953L18 9.33301V11.5H22V12.5H18V14.667L16.6865 15.9795L19.4248 18.7178L18.7178 19.4248L15.9795 16.6865L14.667 18H12.5V22H11.5V18H9.33301L8.01953 16.6865L5.28223 19.4248L4.5752 18.7178L7.3125 15.9795L6 14.667V12.5H2V11.5H6V9.33301L7.3125 8.01953L4.5752 5.28223L5.28223 4.5752L8.01953 7.3125L9.33301 6H11.5V2H12.5V6ZM9.77734 7L7 9.77734V14.2227L9.77734 17H14.2227L17 14.2227V9.77734L14.2227 7H9.77734Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <button
    aria-label="Switch color theme to dark mode"
    class="vesper-theme-switcher-button vesper-theme-switcher-button-dark"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M19 8.88867V15.1113L15.1113 19H8.88867L5 15.1113V8.88867L8.88867 5H15.1113L19 8.88867ZM6 9.33301V14.667L9.33301 18H12V6H9.33301L6 9.33301Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <span
    class="vesper-theme-switcher-indicator"
  />
</div>
`;
